--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -33,11 +33,15 @@
   "scripts": {
     "build": "tsc --noEmit && tsup",
     "dev": "tsup --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/node": "^18.18.6",
-    "tsup": "^8.3.6"
+    "@vitest/coverage-istanbul": "^3.2.3",
+    "nock": "^14.0.5",
+    "tsup": "^8.3.6",
+    "tsx": "^4.20.2",
+    "vitest": "^3.2.3"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.13.1",
